Reetan.Nayak Dev 25/force-app/main/default/objects/Training_Registration__c/Training_Registration__c.object-meta.xml
<CustomObject>
    <label>Training Registration</label>
    <nameField>
        <displayFormat>TN#-{0000}</displayFormat>
        <label>Registration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Registrations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>