Reetan.Nayak Dev 25/force-app/main/default/objects/Training_Registration__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Training_Registration</relationshipName>
    <type>Lookup</type>
</CustomField>