Reetan.Nayak Dev 25/force-app/main/default/objects/Training_Registration__c/fields/Training_Course__c.field-meta.xml
<CustomField>
    <fullName>Training_Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Course</label>
    <referenceTo>Training_Course__c</referenceTo>
    <relationshipName>Training_Registration</relationshipName>
    <type>Lookup</type>
</CustomField>