Reetan.Nayak Dev 25/force-app/main/default/objects/Training_Registration__c/listViews/AllRegistrations.listView-meta.xml
<ListView>
    <fullName>AllRegistrations</fullName>
    <columns>NAME</columns>
    <columns>Registration_Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Registrations</label>
    <language>en_US</language>
</ListView>